[project]
name = "paid-art-cdn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "slowapi>=0.1.9",
]

[project.scripts]
paid-art-cdn = "main:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "paid_art_cdn"
module-root = "src"

[dependency-groups]
dev = [
    "ty>=0.0.21",
]
